# ask-cli

./: .env.example  Cargo.toml  README.md  log.md
Formula/: ask-cli.rb
logs/: add_arrow.md  add_streaming_file.md  cargo_binaries.md  cargo_to_homebrew.md  diff_main.diff  diff_main.md  filesystem_key_fallback.md  tests.md
prompts/: add_arrow_cursor.txt  add_streaming_file.txt  cargo_binaries.txt  cargo_to_homebrew.md  diff_arrow_cursor.txt  filesystem_key_fallback.txt  prompt_injector.txt  refactor.txt  test_prompt_exec.txt
src/: ai.rs  exec_prompt.rs  main.rs  secure_storage.rs  watch_prompt.rs
