[package]
name = "ask-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.11.0"
clap = { version = "4.3.4", features = ["derive"] }
futures = "0.3.28"
keyring = "2.0.3"
regex = "1.8.4"
tokio = { version = "1.28.2", features = ["full"] }
tokio-test = "0.4.2"

[[bin]]
name = "ask"
path = "src/main.rs"
